fixed About Me left alignment bug

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,46 +1,47 @@
 /* common style elements for all pages*/
 
 body {
-    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color:#777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    margin: 0px;
 }
 
 #top{
-    background-color:white;
+    background-color: white;
     border-bottom: 2px solid #cccccc;
 }
 
 #topContent{
     width: 960px;
-    margin:auto;
-    overflow:auto;
+    margin: auto;
+    overflow: auto;
 }
 
 #topContentLeft{
-    font-size:24px;
+    font-size: 24px;
     font-weight: bold;
-    float:left;
-    color:white;
-    background-color:#4aaaa5;
-    padding:20px;
-    font-family:'Georgia', Times, Times New Roman, serif;
+    float: left;
+    color: white;
+    background-color: #4aaaa5;
+    padding: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 #topContentRight{
-    float:right;
-    color:yellow;
-    text-align:right;
-    display:inline;
-    padding-top:20pt;
+    float: right;
+    color: yellow;
+    text-align: right;
+    display: inline;
+    padding-top: 20pt;
 }
 
 ul{
     list-style-type: none;
-    display:inline;
+    display: inline;
 }
 
 li{
-    float:right;
+    float: right;
 }
 
 a{
@@ -55,19 +56,19 @@ a:visited{
 }
 
 a:visited:hover{
-    color:black;
-    font-weight:bold;
+    color: black;
+    font-weight: bold;
 }
 
 #main{
-    background-image:url("../images/gravel.png");
-    padding:20px 20px 60px 20px;
+    background-image: url("../images/gravel.png");
+    padding: 20px 20px 60px 20px;
 }
 
 #mainContent{
-    width:920px;
+    width: 920px;
     background-color: white;
-    margin:auto;
+    margin: auto;
     padding: 20px;
     border-left: 2px solid #dddddd;
     border-right: 2px solid #dddddd;
@@ -77,25 +78,23 @@ a:visited:hover{
 
 #mainTitle{
     font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size:24px;
+    font-size: 24px;
     font-weight: bold;
-    padding-bottom:20px;
-    border-bottom:2px solid #dddddd;
-    color:#4aaaa5;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #dddddd;
+    color: #4aaaa5;
 }
 
-#mainParagraph{
-    font-size:12px;
-}
+
 
 #bottom{
-    color:white; /* not the right color */
+    color: white; /* not the right color */
     clear: both;
-    background-color:#666666;
+    background-color: #666666;
     text-align: center;
-    font-size:8px;
+    font-size: 8px;
     border-top: 5px solid teal;
-    padding-top:20px;
+    padding-top: 20px;
 }
 /* end of common style elements for all pages*/
 
@@ -103,28 +102,29 @@ a:visited:hover{
 /* styles specifically for "About Me" page */
 p{
     line-height: 2;
+    font-size: 12;
 }
 
 #me{
-    padding-top:15px;
-    padding-right:20px;
-    float:left;
-    height:100px;
-    width:100px;
+    padding-top: 15px;
+    padding-right: 20px;
+    float: left;
+    height: 100px;
+    width: 100px;
 }
 /* end of styles specifically for "About Me" page */
 
 
 /* styles specifically for "Portfolio" page */
 .column{
-    padding-top:20px;
+    padding-top: 20px;
     float: left;
-    width:320px;
+    width: 320px;
 }
 
 .portfolioImage{
-    width:290px;
-    height:200px;
+    width: 290px;
+    height: 200px;
 }
 
 .portfolioProject:hover{
@@ -133,45 +133,45 @@ p{
 
 .imageLabel{
     font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size:20px;
+    font-size: 20px;
     color: white;
-    background-color:4aaaa5;
+    background-color: #4aaaa5;
     position: relative;
     top: -93px;
     line-height: 64px;
     text-align: center;
-    width:290px;
+    width: 290px;
 }
 /* end of styles specifically for "Portfolio" page */
 
 
 /* styles specifically for "Contact Me" page */
 .textFieldTitleTop{
-    line-height:1;
-    margin:20px 0px 10px 0px;
+    line-height: 1;
+    margin: 20px 0px 10px 0px;
 }
 
 .textFieldTitle{
-    line-height:1;
-    margin:10px 0px;
+    line-height: 1;
+    margin: 10px 0px;
 }
 .textField{
     width: 920px;
-    line-height:1.5;
+    line-height: 1.5;
 }
 
 .textBox{
-    width:920px;
+    width: 920px;
 }
 
 #button{
-    margin-top:20px;
-    background-color:#4aaaa5;
-    color:white;
-    width:100px;
-    height:35px;
-    border:none;
+    margin-top: 20px;
+    background-color: #4aaaa5;
+    color: white;
+    width: 100px;
+    height: 35px;
+    border: none;
 }
 
-#button:hover {background-color:#008080;}
+#button:hover {background-color: #008080;}
 /* end of styles specifically for "Contact Me" page */
